2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added basic tag to --enable-dht, --dht-listen-port option.
	* src/HelpItemFactory.cc (createHelpItems)

2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated text.
	* src/usage_text.h

2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/MSEHandshake.cc (encryptAndSendData): Use std::min().

2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Determin _threadtholdSpeed in each constructor for
	ActivePeerConnectionCommand and PeerReceiveHandshakeCommand.
	* src/ActivePeerConnectionCommand.{h, cc}
	* src/PeerReceiveHandshakeCommand.{h, cc}
	* src/BtSetup.cc
	* src/BtConstants.h

2008-02-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --bt-min-crypto-level and --bt-require-crypto options.
	* src/OptionHandlerFactory.cc
	* src/MSEHandshake.cc
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/ReceiverMSEHandshakeCommand.cc
	* src/prefs.h
	* src/DefaultBtAnnounce.cc
	* src/InitiatorMSEHandshakeCommand.cc
	* src/usage_text.h
	* test/MSEHandshakeTest.cc

2008-02-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump version number to 0.13.0b
	* configure.ac

2008-02-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated doc.
	* src/MessageDigestHelper.h: 

2008-02-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use raw message digest as a token instead of its hexadecimal
	representation.
	* src/DHTTokenTracker.cc (generateToken)

2008-02-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Message Stream Encryption(MSE) support.
	Currently, aria2 accepts incoming connections with Obfuscation Header
	and legacy BitTorrent Header and establishes connections with
	Obfuscation Header first and if failed then retry with legacy
	BitTorrent header. If plain text and ARC4 is provided, aria2 always
	choose ARC4. The new option to change the default behavior is planned.